<resources>
    <string name="app_name">Final Project</string>
    <string-array name="expense_categories">
        <item>Food</item>
        <item>Transport</item>
        <item>Entertainment</item>
        <item>Utilities</item>
        <item>Miscellaneous</item>
    </string-array>

    <string-array name="payment_methods">
        <item>Cash</item>
        <item>Credit Card</item>
        <item>Debit Card</item>
        <item>Bank Transfer</item>
    </string-array>


    <!-- Button Texts -->
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>

    <!-- Hint Texts -->
    <string name="amount_hint">Amount</string>
    <string name="date_hint">Date</string>
    <string name="notes_hint">Notes</string>


    <string name="hint_amount">Amount</string>
    <string name="hint_date">Date (DD/MM/YYYY)</string>
    <string name="hint_notes">Notes (Optional)</string>
    <string name="btn_add_expense">Add Expense</string>



    <string name="hint_expense_name">Expense Name</string>
    <string name="hint_total_amount">Total Amount</string>


    <string name="hint_group_name">Group Name</string>
    <string name="hint_member_name">Member Name</string>
    <string name="btn_add_member">Add Member</string>
    <string name="btn_save_group">Save Group</string>

    <string name="add_expense">Add Expense</string>
    <string name="view_expenses">View Expenses</string>
    <string name="add_reminder">Add Reminder</string>
    <string name="create_group">Create Group</string>
    <string name="view_groups">View Groups</string>
    <string name="add_group_expense">Add Group Expense</string>
    <string name="view_group_expenses">View Group Expenses</string>

    <string name="select_transaction">Select Transaction</string>
    <string name="no_expenses">No expenses available</string>

    <string name="expense_details">Expense Details</string>
    <string name="hint_select_date">Select Date</string>
    <string name="hint_select_time">Select Time</string>


    <string name="category_hint">Category</string>

    <string name="no_expenses_message">No expenses to display</string>

    <string name="group_name">Group Name</string>
    <string name="enter_member_name">Enter New Member Name</string>
    <string name="add_member">Add Member</string>
    <string name="delete_group">Delete Group</string>

    <string name="total_expense">Total Expense: $0.00</string>


    <string name="amount_label">Amount:</string>
    <string name="category_label">Category:</string>
    <string name="date_label">Date:</string>
    <string name="notes_label">Notes:</string>
    <string name="payment_method_label">Payment Method:</string>
    <string name="edit_expense">Edit Expense</string>

    <string name="expense_name">Expense Name</string>
    <string name="total_amount">Total Amount: $0.00</string>
    <string name="split_amount">Split Amount: $0.00</string>

    <string name="member_name">Member Name</string>




</resources>
