<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="@dimen/activity_padding">

        <TextView
            android:id="@+id/tvExpenseDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/expense_details"
            android:textSize="@dimen/text_size_medium"
            android:layout_marginBottom="@dimen/spacing_small"
            android:gravity="center" />

        <EditText
            android:id="@+id/etDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_select_date" />

        <EditText
            android:id="@+id/etTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_select_time" />

        <Button
            android:id="@+id/btnAddReminder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_reminder"
            android:layout_marginTop="@dimen/spacing_small"
            android:padding="@dimen/button_padding"
            android:layout_gravity="center" />

    </LinearLayout>
</ScrollView>
