<?xml version="1.0" encoding="utf-8"?>
<androidx.wear.widget.BoxInsetLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_padding">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/activity_padding">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/activity_padding">

            <TextView
                android:id="@+id/tvGroupName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/group_name"
                android:textSize="@dimen/text_size_large"
                android:textColor="@android:color/black"
                android:padding="@dimen/text_padding" />

            <EditText
                android:id="@+id/etNewMemberName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_member_name"
                android:inputType="text"
                android:layout_marginTop="@dimen/edit_text_margin_top" />

            <Button
                android:id="@+id/btnAddMember"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_member"
                android:layout_marginTop="@dimen/button_margin_top" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvGroupMembers"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginTop="@dimen/recycler_view_margin_top" />

            <Button
                android:id="@+id/btnDeleteGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/delete_group"
                android:background="@android:color/holo_red_light"
                android:textColor="@android:color/white"
                android:layout_marginTop="@dimen/button_margin_top" />

        </LinearLayout>
    </ScrollView>
</androidx.wear.widget.BoxInsetLayout>
